--- a/See Food/Base.lproj/Main.storyboard
+++ b/See Food/Base.lproj/Main.storyboard
@@ -18,16 +18,51 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ex8-F5-Me1">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hotdogBackground" translatesAutoresizingMaskIntoConstraints="NO" id="hoR-ox-94u" userLabel="Static Hotdog Image">
+                                <rect key="frame" x="67" y="269" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="0hf-7f-uFj"/>
+                                    <constraint firstAttribute="height" constant="128" id="X9a-3S-qeY"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ex8-F5-Me1" userLabel="User Chosen Image">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Qst-HI-NhY">
+                                <rect key="frame" x="0.0" y="64" width="375" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="3aF-RP-Qpu"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Je1-c6-7v0">
+                                <rect key="frame" x="132" y="537" width="110" height="54"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="0.5409764051" blue="0.84731429820000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="35"/>
+                                <state key="normal" title="Share">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <integer key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="shareTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sy2-k1-2Tu"/>
+                                </connections>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.0" green="0.83529411764705885" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Qst-HI-NhY" secondAttribute="trailing" id="0Z5-pk-gVs"/>
                             <constraint firstItem="Ex8-F5-Me1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="1A1-PV-CT9"/>
+                            <constraint firstItem="Qst-HI-NhY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="AUz-sZ-sCU"/>
                             <constraint firstItem="Ex8-F5-Me1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="S9E-X4-JIp"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Ex8-F5-Me1" secondAttribute="bottom" id="cRp-5U-xgj"/>
+                            <constraint firstItem="hoR-ox-94u" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ca7-zc-Uwk"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ex8-F5-Me1" secondAttribute="trailing" id="duv-vk-vEP"/>
+                            <constraint firstItem="Qst-HI-NhY" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="hng-6K-8tf"/>
+                            <constraint firstItem="hoR-ox-94u" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="lYX-YG-VnL"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -41,6 +76,8 @@
                     <connections>
                         <outlet property="cameraButton" destination="Sbo-hN-m62" id="nOw-Yk-YWY"/>
                         <outlet property="imageView" destination="Ex8-F5-Me1" id="5Ph-pS-VJ7"/>
+                        <outlet property="shareButton" destination="Je1-c6-7v0" id="Jz1-2A-93k"/>
+                        <outlet property="topBarImageView" destination="Qst-HI-NhY" id="qUQ-L2-7aL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -66,4 +103,7 @@
             <point key="canvasLocation" x="-207" y="82"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="hotdogBackground" width="198" height="255"/>
+    </resources>
 </document>
